# libfs

./: .codedocs  .gitignore  CHANGES  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: unittests.yml
doc/: libfs.doxyfile
examples/: run_all_examples.bash
examples/descriptor_info/: descriptor_info  descriptor_info.cpp
examples/read_annot/: read_annot.cpp
examples/read_curv/: read_curv.cpp
examples/read_label/: read_label.cpp
examples/read_metadata/: subjects.txt
examples/read_mgh/: lh.thickness.mgh  read_mgh.cpp
examples/read_mgz/: read_mgz  read_mgz.cpp
examples/read_surf/: read_surf  read_surf.cpp
include/: libfs.h  libfs.hpp
src/: demo_main.cpp  libfs_tests.cpp
